<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_title"
            android:checked="true"
            android:title="@string/title_sort" />
        <item
            android:id="@+id/action_release_date"
            android:checked="false"
            android:title="@string/release_date_sort" />
        <item
            android:id="@+id/action_popularity"
            android:checked="false"
            android:title="@string/popularity_sort" />
        <item
            android:id="@+id/action_vote_average"
            android:checked="false"
            android:title="@string/vote_average_sort" />
        <item
            android:id="@+id/action_vote_count"
            android:checked="false"
            android:title="@string/vote_count_sort" />
        <item
            android:id="@+id/action_random"
            android:checked="false"
            android:title="@string/random" />
    </group>
</menu>