<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard_bottom_navigation"
    app:startDestination="@id/item_movies">

    <fragment
        android:id="@+id/item_movies"
        android:name="io.erikrios.github.canvaskitmovie.movies.MoviesFragment"
        android:label="@string/movies"
        tools:layout="@layout/fragment_movies" />
    <fragment
        android:id="@+id/item_tv_shows"
        android:name="io.erikrios.github.canvaskitmovie.tvshows.TvShowsFragment"
        android:label="@string/tv_shows"
        tools:layout="@layout/fragment_tv_shows" />
    <fragment
        android:id="@+id/item_trending"
        android:name="io.erikrios.github.canvaskitmovie.trending.TrendingFragment"
        android:label="@string/trending"
        tools:layout="@layout/fragment_trending" />
</navigation>